styling nav bar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>PuppyTab</h1>
         <nav class="quick-links">
                 <span><a href="#0">My Household</a></span>
-                <span><a href="#0">Calender</a></span>
+                <span><a href="#0">Calendar</a></span>
                 <span><a href="#0">Print My Info</a></span>
                 <span><a href="#0">Add Event</a></span>
                 <span><a href="#0">About PuppyTab</a></span>
