--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+
     <header class="nav-bar">
         <h1>PuppyTab</h1>
         <nav class="quick-links">
@@ -17,6 +18,37 @@
                 <span><a href="#0">About PuppyTab</a></span>
         </nav>
     </header>
+
+    <section class="household">
+        <div id="first-pet" class="pet-card">
+            
+            <table>
+                <div class="pet-picture-frame">
+                    <img class="pet-picture" src="media/paz.jpg">
+                </div>
+                <caption>Paz</caption>
+                <tbody>
+                    <tr>
+                        <th>Age</th>
+                        <td>age</td>
+                    </tr>
+                    <tr>
+                        <th>Vaccinations Current</th>
+                        <td>Yes</td>
+                    </tr>
+                    <tr>
+                        <th>Food</th>
+                        <td>ProPlan Beef</td>
+                    </tr>
+                    <tr>
+                        <th>Medications</th>
+                        <td>none</td>
+                    </tr>
+                </tbody>
+            </table>
+
+        </div>
+    </section>
 
 
 
