--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
                 <span class="nav-tile"><a href="#0">Add Event</a></span>
                 <span class="nav-tile"><a href="#0">About PuppyTab</a></span>
         </nav>
-        <a id="hamburger-icon"><img src="./media/icons8-menu-48.png"/></a>
+        <div class="hamburger-icon">
+            <div class="line line1"></div>
+            <div class="line line2"></div>
+            <div class="line line3"></div>
+        </div>
     </header>
 
     <h1 id="household-header">My Household</h1>
@@ -143,6 +147,8 @@
     <footer>
         <p></p>
     </footer>
+
+    <script src="app.js" type="text/javascript"></script>
 
 </body>
 
